# cp-amm

./: Anchor.toml  Cargo.toml
programs/cp-amm/: Cargo.toml
programs/cp-amm/src/: constants.rs  curve.rs  event.rs  lib.rs
programs/cp-amm/src/instructions/: ix_add_liquidity.rs  ix_remove_liquidity.rs  ix_swap.rs
programs/cp-amm/src/instructions/admin/: auth.rs
programs/cp-amm/src/manager/: mod.rs  swap_manager.rs
programs/cp-amm/src/math/: safe_math.rs
programs/cp-amm/src/pool_action_access/: base.rs  permissionless.rs
programs/cp-amm/src/utils/: activation_handler.rs  alpha_vault.rs
