[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[patch.crates-io]
anchor-lang = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-spl = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-client = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
